--- a/css.css
+++ b/css.css
@@ -1,42 +1,46 @@
 body {
-    background-color: #242582;
-    font-family:Arial, Helvetica, sans-serif;
-    color: rgb(255,255,255);
+  background-color: #242582;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
 }
 
 #banner img {
-    border: solid black 4px;
-    border-radius: 8px;
+  border: solid black 4px;
+  border-radius: 8px;
+  width: 98%;
+  margin: 0 auto;
 }
+
 #banner {
-    font-size: 30px;
-    text-align: center;
-    margin: auto;
+  font-size: 30px;
+  text-align: center;
+  margin: 0 auto;
 }
+
 #Nav {
-    margin: auto;
-    width: 50%;
-    text-align: center;
-    text-decoration:none;
+  margin: 0 auto;
+  width: 50%;
+  text-align: center;
+  text-decoration: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #Nav ul {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-#Nav li{
-    display: inline;
-    background-color:#F64C72;
-    text-align: center;
-    padding: 8px;
-    border: solid black 3px;
-    border-radius: 5px;
-    text-decoration: none;
-    color:white;
+#Nav li {
+  display: inline-block;
+  background-color: #F64C72;
+  text-align: center;
+  padding: 8px;
+  border: solid black 3px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
 }
 
 
@@ -45,7 +49,7 @@ a {
 } */
 
 #Nav li:hover {
-    background-color:darkcyan;
+  background-color: darkcyan;
 }
 
 
@@ -67,20 +71,20 @@ a {
 } */
 
 #Contents h1 {
-    text-align: center;
+  text-align: center;
 }
 
 #Contents p {
-    font-size: 20px;
-    /* text-align:center; */
+  font-size: 20px;
+  /* text-align:center; */
 }
 
 #Contents h2 {
-    text-align: center;
+  text-align: center;
 }
 
 #Contents ul {
-    margin:auto;
+  margin: auto;
 }
 
 /* #fate-desc {
@@ -88,15 +92,15 @@ a {
 } */
 
 .row {
-    display: flex;
-    
+  display: flex;
+
 }
 
 .column {
-    margin: 0 auto;
-    padding: 10px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
-
-
-
+.column img {
+  height:100%;
+}
